src/tests/ci/assignment_5_functions/valid/04_include_define.c
#include <stdio.h>
#define FIVE 5

int main() {
    int x = FIVE;
    return 0;
}