src/tests/ci/assignment_5_functions/invalid_semantic/21_conflicting_declarations.c
int add(int a, int b);
float add(int a, int b);

int main() {
    return 0;
}